--- a/views/order.ejs
+++ b/views/order.ejs
@@ -14,15 +14,39 @@
             <th>Id</th>
             <th>Action</th>
             <th>Schedule</th>
+            <th>Price</th>
             <th>Grids</th>
         </tr>
-        <% schedules.forEach(function(schedule){ %>
+        <% schedules.forEach(function(schedule,index){ %>
         <tr>
             <td><%= schedule.id %></td>
             <td><input type="checkbox" name="<%= schedule.id %>" value="<%= schedule.id %>"></td>
             <td> <%= schedule.time1 %> - <%= schedule.time2 %></td>
-            <td>
-                
+            <td> <%= schedule.price %></td>
+            <td > 
+                <table>
+                <% let grid=[false,false,false,false];
+                     if (schedule.ScheduleOrders){ 
+                            for(let i=0;i<schedule.ScheduleOrders.length;i++){
+                                if(schedule.ScheduleOrders[i].GridOrders){
+                                    for(let j=0;j<schedule.ScheduleOrders[i].GridOrders.length;j++){
+                                        //console.log(`jam ke ${schedule.time1} : ${schedule.ScheduleOrders[i].GridOrders[j].GridId-1} `)
+                                        grid[schedule.ScheduleOrders[i].GridOrders[j].GridId-1]=true
+                                    } 
+                                }  
+                               
+                            }
+                    }  //console.log(grid) %> 
+  
+                <tr>
+                    <td><input type="checkbox" name="schedule[<%= index %>]" <%= grid[0]? 'checked':'' %> <%= grid[0]? 'disabled':'' %> value="<%= grid[0]? '-1':'1' %>"></td>
+                    <td><input type="checkbox" name="schedule[<%= index %>]" <%= grid[1]? 'checked':'' %> <%= grid[1]? 'disabled':'' %>  value="<%= grid[1]? '-1':'2' %>"></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox" name="schedule[<%= index %>]" <%= grid[2]? 'checked':'' %> <%= grid[2]? 'disabled':'' %> value="<%= grid[2]? '-1':'3' %>"></td>
+                    <td><input type="checkbox" name="schedule[<%= index %>]" <%= grid[3]? 'checked':'' %> <%= grid[3]? 'disabled':'' %> %> value="<%= grid[3]? '-1':'4' %>"></td>
+                </tr>
+                </table>
             </td>
             
         </tr>
